testcases/negative/property_after_end.vcf
BEGIN:VCARD
VERSION:4.0
FN:John Doe
END:VCARD
ORG:This should not be here
